<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_welcome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_welcome" />
        <item
            android:id="@+id/nav_casos"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_casos" />
        <item
            android:id="@+id/nav_mortes"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/menu_mortes" />
        <item
            android:id="@+id/nav_testes"
            android:icon="@drawable/ic_healing_black_24dp"
            android:title="@string/menu_testes" />
    </group>
</menu>
